# karoo-libs

./: .gitignore  .gitmodules  Dockerfile.in  Makefile.am  configure.ac  docker-build-init  docker-build-rpm  docker-configure  docker-shell  oss_karoo_bridge_libs.repo.in  oss_karoo_bridge_libs.spec.in
CentOS_7/x86_64/: http-parser-2.7.1-3.el7.x86_64.rpm  http-parser-devel-2.7.1-3.el7.x86_64.rpm  turnserver-4.5.0.6-0.el7.centos.x86_64.rpm  turnserver-client-libs-4.5.0.6-0.el7.centos.x86_64.rpm  turnserver-utils-4.5.0.6-0.el7.centos.x86_64.rpm
apps/: apps.am  captagent.am  node.am
debian/: changelog  control  copyright  karoolibs-2.0.3-dev.install  karoolibs-2.0.3.README.Debian  karoolibs-2.0.3.install  rules
libs/: libs.am  opal.am  ptlib.am  resiprocate.am
