AC_PREREQ(2.57)
AC_INIT(oss_karoo_bridge_libs, 2.0.3, info@ossapp.com)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(foreign tar-pax subdir-objects)
AC_PROG_LIBTOOL
AC_PATH_PROG([BASH], [bash])
AC_PROG_CXX
AC_PROG_CC

AC_CONFIG_FILES([
  Makefile
  Dockerfile
  oss_karoo_bridge_libs.repo
])

AC_OUTPUT
